# celerity-runtime

./: .clang-format  .clang-tidy  .editorconfig  .gdbinit  .git-blame-ignore-revs  .gitignore  .gitmodules  .hdoc.toml  .ideaCodeStyle.xml  .lvimrc  .overcommit.yml  2d_split.ipynb  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CMakeSettings.json.template  CONTRIBUTING.md  LICENSE  README.md  celerity_runtime.cc  celerity_runtime.h  liveplot.js  main.cc  runtime_tests.cc  view_graphs.html  winbuild.sh
.git-hooks/: no_commit.rb
.git-hooks/pre_commit/: no_commit.rb
.github/workflows/: benchmark.yml  build_matrix.json  celerity_ci.yml  celerity_perf_check.yml
benchmarks/: CMakeLists.txt  benchmark_utils.h  task_microbenchmark.cc
ci/: capture-coverage.sh  check-perf-impact.rb  find-unformatted-files.sh  lsan.suppressions  run-benchmarks.sh  run-clang-tidy.sh  run-examples.sh  run-integration-tests.sh  run-system-tests.sh  run-unit-tests.sh  simsycl-system.json
ci/perf/: gpuc1_bench.csv  gpuc1_bench.md  gpuc1_bench.txt  gpuc2_bench.csv  gpuc2_bench.md
cmake/: AddToTarget.cmake  ConfigCatch2.cmake  ConfigGTest.cmake  Download_Catch2.cmake  Download_spdlog.cmake  FindComputeCpp.cmake  GenerateVersionHeader.cmake  GenerateVersionSource.cmake  TestDPCXX.cmake  celerity-config.cmake  celerity-config.cmake.in  sycl_test.cpp  version.h.in
cmake/hipsycl_feature_test/: CMakeLists.txt  hipsycl_reduction_test.cpp
docs/: README.md  configuration.md  core-principles.md  getting-started.md  host-tasks.md  installation.md  issues-and-limitations.md  overview.md  pitfalls.md  platform-support.md  range-mappers.md  reductions.md  tutorial.md
examples/: .clang-tidy  CMakeLists.txt  README.md
examples/compressed/: CMakeLists.txt  compressed.cc  compression.h
examples/compressed_actually/: CMakeLists.txt  compressed.cc  compressed_actually.cc
examples/compressed_nd_range/: CMakeLists.txt  compressed_nd_range.cc
examples/compression_local_wave_sim/: CMakeLists.txt  compression.h  compression_local_wave_sim.cc
examples/convolution/: CMakeLists.txt  convolution.cc
examples/distr_io/: CMakeLists.txt  distr_io.cc
examples/fvm/: fvm.cc  hash.h
examples/gaussian/: CMakeLists.txt  gaussian.cc
examples/hello_world/: CMakeLists.txt  hello_world.cc
examples/jacobi/: jacobi.cc
examples/matmul/: CMakeLists.txt  matmul.cc  matmulChain.cc
examples/matmul_tiled/: CMakeLists.txt  matmul_tiled.cc
examples/nd_range_wave_sim/: CMakeLists.txt  nd_range_wave_sim.cc
examples/reduction/: CMakeLists.txt  reduction.cc  stb
examples/simple/: CMakeLists.txt  simple.cc
examples/syncing/: CMakeLists.txt  syncing.cc
examples/umuguc/: CMakeLists.txt  compare_results.py  eigen_decomposition.hpp  tilebuffer_tests.cc  tilebuffer_utils.h  umuguc.cc
examples/umuguc/cmake/: FindNCCL.cmake
examples/wave_sim/: CMakeLists.txt  README.md  animate.rb  plot.rb  wave_sim.cc
include/: access_modes.h  accessor.h  affinity.h  ansicolor_sink_custom.h  async_event.h  boost_workarounds.h  buffer.h  buffer_manager.h  buffer_state.h  buffer_storage.h  buffer_transfer_manager.h  capture.h  ccpp_2020_compatibility_layer.h  celerity.h  celerity_runtime.h  cgf.h  cgf_diagnostics.h  closure_hydrator.h  command.h  command_graph.h  command_graph_generator.h  communicator.h  compression.h  config.h  conflict_graph.h  cool_region_map.h  debug.h  dense_map.h  device_queue.h  device_selection.h  device_selector.h  distr_queue.h  distributed_graph_generator.h  divergence_block_chain.h  divergence_checker.h  double_buffered_queue.h  dry_run_executor.h  epoch_graph.h  executor.h  expert_mapper.h  (+77 more)
include/backend/: async_event.h  backend.h  cuda_backend.h  generic_backend.h  operations.h  queue.h  sycl_backend.h  traits.h  type.h
include/legacy_backend/: backend.h  cuda_backend.h  generic_backend.h  operations.h  traits.h  type.h
src/: affinity.cc  buffer.cc  buffer_manager.cc  buffer_state.cc  buffer_storage.cc  buffer_transfer_manager.cc  celerity_runtime.cc  command_graph.cc  command_graph_generator.cc  config.cc  device_queue.cc  distr_queue.cc  distributed_graph_generator.cc  divergence_block_chain.cc  divergence_checker.cc  dry_run_executor.cc  executor.cc  graph_builder.cc  graph_generator.cc  graph_serializer.cc  graph_utils.cc  grid.cc  handler.cc  instruction_executor.cc  instruction_graph_generator.cc  legacy_executor.cc  live_executor.cc  local_devices.cc  mpi_communicator.cc  mpi_support.cc  named_threads.cc  out_of_order_engine.cc  print_graph.cc  print_utils.cc  receive_arbiter.cc  recorders.cc  runtime.cc  scheduler.cc  split.cc  task.cc  (+7 more)
src/backend/: CMakeLists.txt  backend.cc  cuda_backend.cc  generic_backend.cc  sycl_backend.cc  sycl_cuda_backend.cc  sycl_generic_backend.cc
test/: .clang-tidy  CMakeLists.txt  accessor_tests.cc  affinity_tests.cc  allocator_tests.cc  backend_tests.cc  benchmark_csv_reporter.cc  benchmark_reporters.cc  benchmarks.cc  buffer_manager_test_utils.h  buffer_manager_tests.cc  buffer_transfer_manager_tests.cc  command_graph_general_tests.cc  command_graph_generator_test_utils.h  command_graph_granularity_tests.cc  command_graph_reduction_tests.cc  command_graph_transfer_tests.cc  copy_test_utils.h  dag_benchmarks.cc  debug_naming_tests.cc  device_selection_tests.cc  distributed_graph_generation_tests.cc  distributed_graph_generator_test_utils.h  divergence_check_test_utils.h  divergence_check_tests.cc  divergence_checker_test_utils.h  divergence_checker_tests.cc  double_buffered_queue_tests.cc  executor_tests.cc  expert_mapper_tests.cc  graph_compaction_tests.cc  graph_gen_granularity_tests.cc  graph_gen_reduction_tests.cc  graph_gen_transfer_tests.cc  graph_generation_tests.cc  graph_test_utils.h  grid_benchmarks.cc  grid_test_utils.cc  grid_test_utils.h  grid_tests.cc  (+44 more)
test/debug/: CMakeLists.txt  pretty-print-test.py  pretty_printables.cc
test/integration/: CMakeLists.txt  backend.cc  run-integration-tests.py
test/system/: CMakeLists.txt  distr_tests.cc  mpi_tests.cc
website/: .gitignore  README.md  package.json  sidebars.json  siteConfig.js
(+22 files in other folders)
